--- a/portfolio/public/assets/i18n/es.json
+++ b/portfolio/public/assets/i18n/es.json
@@ -240,7 +240,7 @@
       "who_am_i": "QUIÉN SOY",
       "education": "EDUCACIÓN",
       "experience": "EXPERIENCIA",
-      "my_skills": "MIS HABILIDADES",
+      "my_skills": "HABILIDADES",
       "projects": "PROYECTOS"
     },
     "block_subtitles": {
