--- a/portfolio/public/assets/i18n/es.json
+++ b/portfolio/public/assets/i18n/es.json
@@ -107,7 +107,7 @@
         "link": "",
         "date": "2021 - 2023",
         "place": "Online - Argentina",
-        "description": "Completé un programa integral de 2 años que abarca Diseño Web, Agilidad de Aprendizaje, Metodologías Ágiles y Scrum, programación en JavaScript, diseño UX/UI y pruebas de calidad de software. Desarrollé habilidades en bases de datos MySQL, React.js, programación orientada a objetos en Java y Spring Boot, infraestructura en AWS, computación en la nube y comunicación efectiva y colaboración dentro de equipos de trabajo. Maneje con éxito desafíos profesionales demostrando la aplicación práctica del conocimiento adquirido."
+        "description": "Completé un programa integral de 2 años que abarca Diseño Web, Agilidad de Aprendizaje, Metodologías Ágiles y Scrum, programación en JavaScript, diseño UX/UI y pruebas de calidad de software. Desarrollé habilidades en bases de datos MySQL, React.js, programación orientada a objetos en Java y Spring Boot, infraestructura en AWS, computación en la nube y comunicación efectiva y colaboración dentro de equipos de trabajo. Manejé con éxito desafíos profesionales demostrando la aplicación práctica del conocimiento adquirido."
       }
     },
     "free_code_camp": {
